--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 	<meta property="og:type" content="article">
 	<meta property="og:title" content="Массаж в Пскове.">
 	<meta property="og:description" content="Для лица и тела, аппаратный и ручной. В салоне и на дому.">
-	<meta property="og:image" content="img/main.jpg">
-	<meta property="og:url" content="">
+	<meta property="og:image" content="../img/main.jpg">
+	<meta property="og:url" content="https://yanascript.github.io/Kate/">
 	<meta property="og:site_name" content="Массаж в Пскове">
 </head>
 <body>
