--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 	<meta name="keywords" content="lpg массаж псков, вакуумный массаж псков, массаж лица псков, дарсональ псков, дарсенваль псков, балийский массаж, чистка лица псков">	
 	<meta property="og:locale" content="ru_RU">
 	<meta property="og:type" content="article">
-	<meta property="og:title" content="Массаж в Пскове.">
-	<meta property="og:description" content="Для лица и тела, аппаратный и ручной. В салоне и на дому.">
-	<meta property="og:image" content="https://yanascript.github.io/Kate/img/main.jpg">
-	<meta property="og:url" content="https://yanascript.github.io/Kate/">
-	<meta property="og:site_name" content="Массаж в Пскове">
+	<meta property="og:title" content="Массаж в Пскове."/>
+	<meta property="og:description" content="Для лица и тела, аппаратный и ручной. В салоне и на дому."/>
+	<meta property="og:image" content="https://yanascript.github.io/Kate/img/main.jpg"/>
+	<meta property="og:url" content="https://yanascript.github.io/Kate/"/>
+	<meta property="og:site_name" content="Массаж в Пскове"/>
 </head>
 <body>
 	<div class="wrapper">
