--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 	<meta property="og:title" content="Массаж в Пскове."/>
 	<meta property="og:description" content="Для лица и тела, аппаратный и ручной. В салоне и на дому."/>
 	<meta property="og:image" content="https://yanascript.github.io/Kate/img/main.jpg"/>
+	<meta property="og:image:width" content="400" />
+	<meta property="og:image:height" content="300" />
 	<meta property="og:url" content="https://yanascript.github.io/Kate/"/>
 	<meta property="og:site_name" content="Массаж в Пскове"/>
 </head>
